removed whitespaces / test prerendered react

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,9 +17,7 @@
     
     <script src="build.min.js"></script>
 
-    <div data-rcomp="./src/views/app/resume/resume.js" id="container">
-    <%= staticReact %>
-    </div>
+    <div data-rcomp="./src/views/app/resume/resume.js" id="container"><%= staticReact %></div>
 </body>
 
 </html>
