cleaned up dependencies

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div data-rcomp="./src/views/app/resume/resume.js" id="container"><%= staticReact %></div>
+    <div data-rcomp="./src/views/app/resume/resume.js" data-rpropfile="./src/static/resume.json" id="container"><%= staticReact %></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
