--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE HTML>
-<html>
-
+<!DOCTYPE html>
+<html lang="de">
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <title>www.ender74.de - Meine private Homepage</title>
     <link rel="stylesheet" href="resume.css" />
     <link rel="stylesheet" href="leaflet/leaflet.css" />
