--- a/src/static/resume.css
+++ b/src/static/resume.css
@@ -1,9 +1,3 @@
-.group {
-    width: 100%;
-    padding: 0em 0em 0em 0em;
-    border: 0em 0em 0em 0em;
-}
-
-.groupHeader {
-    background-color: #EFEFEF;
+body {
+    padding-top: 70px;
 }
